--- a/mycssstyle.css
+++ b/mycssstyle.css
@@ -1,4 +1,6 @@
 p{
     color: seagreen;
     text-shadow: 1px 1px 4px darkgrey;
+
+    color:skyblue,blanchedalmond,salmon,olivedrab,navajowhite,lightpink,lightsteelblue,cadetblue,mediumaquamarine,mediumslateblue,mediumorchid,lightblue,lemonchiffon
 }
